<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.9.RELEASE</version>
    </parent>

    <groupId>com.hsy.java</groupId>
    <artifactId>java</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>

    <modules>
        <module>java-enum</module>
        <module>java-bean</module>
        <module>java-algorithm</module>
        <module>java-exercise</module>
        <module>java-resource</module>
        <module>java-base</module>
        <module>java-swing</module>
        <module>java-thread</module>
        <module>java-httpclient</module>
        <module>java-exception</module>
        <module>java-util</module>
        <module>java-security</module>
    </modules>

    <properties>
        <junit.vsersion>4.12</junit.vsersion>
        <beanutils.version>1.9.3</beanutils.version>
        <collections.version>3.2.2</collections.version>
        <logback.version>1.2.3</logback.version>
        <protostuff.version>1.0.8</protostuff.version>
        <version.commons.lang3>3.6</version.commons.lang3>
        <version.velocity>1.7</version.velocity>
        <version.commons.io>2.5</version.commons.io>
        <version.commons.logging>1.2</version.commons.logging>
        <version.commons.codec>1.10</version.commons.codec>
        <version.mariadb>2.1.0</version.mariadb>
        <version.spring>4.3.8.RELEASE</version.spring>
        <version.spring.mybatis>1.3.1</version.spring.mybatis>
        <version.mybatis>3.4.5</version.mybatis>
        <version.mybatis.generator>1.3.5</version.mybatis.generator>
        <version.pagehelper>5.1.1</version.pagehelper>
        <version.fastjson>1.2.7</version.fastjson>
        <version.rabbitmq>4.2.1</version.rabbitmq>
        <version.jedis>2.9.0</version.jedis>
        <version.spring.data.redis>1.8.9.RELEASE</version.spring.data.redis>
        <version.aspectj>1.8.10</version.aspectj>
        <version.hsy.java>1.0</version.hsy.java>
        <version.servlet.api>3.1.0</version.servlet.api>
        <version.aeonbits>1.0.9</version.aeonbits>
        <version.commons.dbutils>1.5</version.commons.dbutils>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-thread</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.vsersion}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${version.commons.io}</version>
            </dependency>

            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${version.commons.lang3}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${version.fastjson}</version>
            </dependency>
            <!-- logback + slf4j start -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <!-- logback + slf4j end -->
            <!--序列化，反序列化工具包-->
            <dependency>
                <groupId>com.dyuproject.protostuff</groupId>
                <artifactId>protostuff-core</artifactId>
                <version>${protostuff.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dyuproject.protostuff</groupId>
                <artifactId>protostuff-runtime</artifactId>
                <version>${protostuff.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.dyuproject.protostuff</groupId>
                        <artifactId>protostuff-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpmime</artifactId>
                <version>4.3.2</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!--模版引擎-->
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <version>${version.velocity}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${version.spring}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${version.spring.mybatis}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${version.mybatis}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-core</artifactId>
                <version>${version.mybatis.generator}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper</artifactId>
                <version>${version.pagehelper}</version>
            </dependency>
            <dependency>
                <groupId>org.mariadb.jdbc</groupId>
                <artifactId>mariadb-java-client</artifactId>
                <version>${version.mariadb}</version>
            </dependency>
            <dependency>
                <groupId>com.rabbitmq</groupId>
                <artifactId>amqp-client</artifactId>
                <version>${version.rabbitmq}</version>
            </dependency>
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${version.jedis}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-redis</artifactId>
                <version>${version.spring.data.redis}</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>${version.aspectj}</version>
            </dependency>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-base</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-util</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-exception</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${version.commons.logging}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${version.commons.codec}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15on</artifactId>
                <version>1.50</version>
            </dependency>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-enum</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>com.hsy.java</groupId>
                <artifactId>java-bean</artifactId>
                <version>${version.hsy.java}</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${version.servlet.api}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${version.spring}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${version.spring}</version>
            </dependency>
            <dependency>
                <groupId>org.aeonbits.owner</groupId>
                <artifactId>owner</artifactId>
                <version>${version.aeonbits}</version>
            </dependency>
            <dependency>
                <groupId>commons-dbutils</groupId>
                <artifactId>commons-dbutils</artifactId>
                <version>${version.commons.dbutils}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- java编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <useDefaultDelimiters>false</useDefaultDelimiters>
                    <escapeString>\</escapeString>
                    <delimiters>
                        <delimiter>${*}</delimiter>
                    </delimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>